--- a/src/scss/partials/media-queries.scss
+++ b/src/scss/partials/media-queries.scss
@@ -50,6 +50,7 @@
         grid-template-columns: repeat(1, 1fr);
       }
       .about {
+        grid-template-columns: 1fr;
         .about__content {
           grid-row: 2;
         }
